--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -1,8 +1,9 @@
 ---
 
-- name: ensure mariadb databases are present.  # noqa args[module]
+- name: ensure mariadb databases are present.
   when:
     - not mariadb_galera_cluster or (mariadb_galera_cluster and mariadb_galera_primary)
+  run_once: "{{ 'true' if mariadb_galera_cluster else 'false' }}"
   community.mysql.mysql_db:
     name: "{{ item.name }}"
     collation: "{{ item.collation | default('utf8_general_ci') }}"
