--- a/tasks/configure/galera-cluster.yml
+++ b/tasks/configure/galera-cluster.yml
@@ -1,145 +1,85 @@
 ---
 
-# TEST
-# - name: cluster mode
-#   when:
-#     - mariadb_galera_cluster
-#     - mariadb_galera_primary
-#   block:
-#     - name: detect {{  mariadb_config_mysqld.datadir }}/grastate.dat
-#       ansible.builtin.stat:
-#         path: "{{ mariadb_config_mysqld.datadir }}/grastate.dat"
-#       register: stat_mariadb_grastate
-#       ignore_errors: true
-#       no_log: true
-#
-#     - name: load {{  mariadb_config_mysqld.datadir }}/grastate.dat
-#       ansible.builtin.slurp:
-#         src: "{{ mariadb_config_mysqld.datadir }}/grastate.dat"
-#       register: mariadb_grastate
-#       no_log: true
-#       when:
-#         - stat_mariadb_grastate.stat.exists | default('false')
-#
-#     - name: detect {{ mariadb_config_mysqld.datadir }}/gvwstate.dat
-#       ansible.builtin.stat:
-#         path: "{{ mariadb_config_mysqld.datadir }}/gvwstate.dat"
-#       register: stat_mariadb_gvwstate
-#       ignore_errors: true
-#       no_log: true
-#
-#     - name: load {{ mariadb_config_mysqld.datadir }}/gvwstate.dat
-#       ansible.builtin.slurp:
-#         src: "{{ mariadb_config_mysqld.datadir }}/gvwstate.dat"
-#       register: mariadb_gvwstate
-#       no_log: true
-#       when:
-#         - stat_mariadb_gvwstate.stat.exists | default('false')
-#
-#     - name: grastate output
-#       ansible.builtin.debug:
-#         msg: "{{ mariadb_grastate.content | b64decode }}"
-#       when:
-#         - stat_mariadb_grastate.stat.exists | default('false')
-#         - mariadb_grastate.content is defined
-#
-#     - name: gvwstate output
-#       ansible.builtin.debug:
-#         msg: "{{ mariadb_gvwstate.content | b64decode }}"
-#       when:
-#         - stat_mariadb_gvwstate.stat.exists | default('false')
-#         - mariadb_gvwstate.content is defined
+- name: "detect bootstraped database"
+  ansible.builtin.stat:
+    path: "{{ mariadb_galera_states.wsrep_bootstrapped }}"
+  register: _bootstraped_database
+
+- name: define facts
+  ansible.builtin.set_fact:
+    galera_bootstraped_database: "{{ _bootstraped_database.stat.exists | default('false') }}"
+
+- name: create wsrep_notify script
+  ansible.builtin.template:
+    src: "bin/wsrep_notify.sh.j2"
+    dest: "/bin/wsrep_notify.sh"
+    owner: root
+    group: mysql
+    mode: "0770"
 
 - name: galera cluster mode
   when:
     - mariadb_galera_cluster
+    - not galera_bootstraped_database
   block:
-    - name: primary
+
+    - name: setup primary instance
+      ansible.builtin.include_tasks: galera/primary.yml
       when:
         - mariadb_galera_primary
-      block:
-        - name: flush handlers
-          ansible.builtin.meta: flush_handlers
+        - not galera_bootstraped_database
 
-        # - name: start mariadb first time
-        #   ansible.builtin.service:
-        #     name: '{{ mariadb_service }}'
-        #     state: started
-        #   # ignore_errors: false
-        #   register: service_status
-        #
-        # - name: check mariadb pid file
-        #   ansible.builtin.wait_for:
-        #     path: "{{ mariadb_config_mysqld.pid_file }}"
-        #     state: present
-        #     delay: 4
-        #     timeout: 120
-        #     msg: "Timeout to find {{ mariadb_config_mysqld.pid_file }}"
-
-      rescue:
-
-        - name: stop mariadb service bootstrap mode
-          ansible.builtin.service:
-            name: "{{ mariadb_service }}"
-            state: stopped
-
-        - name: remove {{ mariadb_config_mysqld.datadir }}/gvwstate.dat
-          ansible.builtin.file:
-            state: absent
-            path: "{{ mariadb_config_mysqld.datadir }}/gvwstate.dat"
-
-        - name: remove {{ mariadb_config_mysqld.datadir }}/grastate.dat
-          ansible.builtin.file:
-            state: absent
-            path: "{{ mariadb_config_mysqld.datadir }}/grastate.dat"
-
-        - name: exit with fail
-          ansible.builtin.fail:
-            msg: "Error while creating the initial database structure!"
-
-    - name: replicas
+    - name: setup secondary instances
+      ansible.builtin.include_tasks: galera/secondary.yml
       when:
         - not mariadb_galera_primary
-      block:
-        - name: flush handlers
-          ansible.builtin.meta: flush_handlers
 
-        # - name: start mariadb first time
-        #   ansible.builtin.service:
-        #     name: '{{ mariadb_service }}'
-        #     state: started
-        #   # ignore_errors: false
-        #   register: service_status
-        #   #notify:
-        #   #  - check mariadb pid file
-        #
-        # - name: check mariadb pid file
-        #   ansible.builtin.wait_for:
-        #     path: "{{ mariadb_config_mysqld.pid_file }}"
-        #     state: present
-        #     delay: 2
-        #     timeout: 120
-        #     msg: "Timeout to find {{ mariadb_config_mysqld.pid_file }}"
-        #   # ignore_errors: false
-      rescue:
+    - name: reconfigure primary instance
+      ansible.builtin.include_tasks: galera/primary_reconfigure.yml
+      when:
+        - mariadb_galera_primary
 
-        - name: stop mariadb service bootstrap mode
-          ansible.builtin.service:
-            name: "{{ mariadb_service }}"
-            state: stopped
+  rescue:
 
-        - name: remove {{ mariadb_config_mysqld.datadir }}/gvwstate.dat
-          ansible.builtin.file:
-            state: absent
-            path: "{{ mariadb_config_mysqld.datadir }}/gvwstate.dat"
+    - name: stop mariadb service bootstrap mode
+      ansible.builtin.service:
+        name: "{{ mariadb_service }}"
+        state: stopped
 
-        - name: remove {{ mariadb_config_mysqld.datadir }}/grastate.dat
-          ansible.builtin.file:
-            state: absent
-            path: "{{ mariadb_config_mysqld.datadir }}/grastate.dat"
+    - name: remove wsrep.cnf
+      ansible.builtin.file:
+        state: absent
+        path: "{{ mariadb_config_include_dir }}/99-wsrep.cnf"
 
-        - name: exit with fail
-          ansible.builtin.fail:
-            msg: "Error while creating the initial database structure!"
+    # - name: remove bootstraped tag
+    #   ansible.builtin.file:
+    #     state: absent
+    #     path: "{{ mariadb_galera_states.wsrep_bootstrapped }}"
+
+    # - name: remove {{ mariadb_config_mysqld.datadir }}/gvwstate.dat
+    #   ansible.builtin.file:
+    #     state: absent
+    #     path: "{{ mariadb_config_mysqld.datadir }}/gvwstate.dat"
+    #
+    # - name: remove {{ mariadb_config_mysqld.datadir }}/grastate.dat
+    #   ansible.builtin.file:
+    #     state: absent
+    #     path: "{{ mariadb_config_mysqld.datadir }}/grastate.dat"
+
+    - name: exit with fail
+      ansible.builtin.fail:
+        msg: "Error while creating the initial database structure!"
+
+- name: cluster information
+  block:
+    - name: get galera cluster state
+      community.mysql.mysql_query:
+        query: SHOW status WHERE Variable_Name IN ('wsrep_ready', 'wsrep_cluster_status', 'wsrep_connected','wsrep_cluster_size')
+        login_unix_socket: "{{ mariadb_socket | default(omit) }}"
+      register: _wsrep_state
+
+    - name: galera cluster state
+      ansible.builtin.debug:
+        msg: "{{ _wsrep_state.query_result }}"
 
 ...
