--- a/tasks/monitoring.yml
+++ b/tasks/monitoring.yml
@@ -26,7 +26,7 @@
         append_privs: false
         encrypted: false
         update_password: on_create
-      no_log: true
+      no_log: "{{ not lookup('env', 'ANSIBLE_DEBUG') | bool }}"
 
     - name: create my.cnf file with password credentials
       ansible.builtin.template:
