Feature/gh 22 support galera cluster (#24)
* update configuration management
* support galera for archlinux too
* rewrite the installation task to support galera cluster

--- a/molecule/galera-cluster/converge.yml
+++ b/molecule/galera-cluster/converge.yml
@@ -2,8 +2,13 @@
 
 - name: converge
   hosts: all
+
   any_errors_fatal: false
   become: false
+  gather_facts: true
+
+  environment:
+    ANSIBLE_DEBUG: true
 
   roles:
     - role: ansible-mariadb
