--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -1,6 +1,9 @@
 ---
 
 - name: create or remove mariadb users
+  when:
+    - not mariadb_galera_cluster or (mariadb_galera_cluster and mariadb_galera_primary)
+  run_once: "{{ 'true' if mariadb_galera_cluster else 'false' }}"
   community.mysql.mysql_user:
     name: "{{ item.name }}"
     password: "{{ item.password }}"
