--- a/tasks/prepare.yml
+++ b/tasks/prepare.yml
@@ -81,6 +81,12 @@
 - name: detect galera cluster
   ansible.builtin.set_fact:
     _mariadb_galera_cluster: "{{ mariadb_config_galera | detect_galera(hostvars) }}"
+  when:
+    - mariadb_config_galera is defined
+    - mariadb_config_galera | bodsch.core.type == 'dict'
+    - mariadb_config_galera.node_addresses is defined
+    - mariadb_config_galera.node_addresses | bodsch.core.type == 'list'
+    - mariadb_config_galera.node_addresses | count > 0
 
 - name: define mariadb_galera and mariadb_galera_primary
   ansible.builtin.set_fact:
