--- a/vars/main.yml
+++ b/vars/main.yml
@@ -286,6 +286,8 @@ mariadb_defaults_galera:
     # - gmcast.peer_timeout=PT10S
     # - pc.announce_timeout=PT10S
 
+_mariadb_galera_cluster: {}
+
 # workaround
 _mysql_cnf_changed: {}
 
