--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -2,7 +2,7 @@
 
 - name: create or remove mariadb users
   when:
-    - not mariadb_galera_cluster or (mariadb_galera_cluster and mariadb_galera_primary)
+    - not mariadb_galera_cluster or (mariadb_galera_cluster and mariadb_galera_primary_node == ansible_hostname)
   run_once: "{{ 'true' if mariadb_galera_cluster else 'false' }}"
   community.mysql.mysql_user:
     name: "{{ item.name }}"
