--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -9,6 +9,10 @@
     collation: "{{ item.collation | default('utf8_general_ci') }}"
     encoding: "{{ item.encoding | default('utf8') }}"
     state: "{{ item.state | default('present') }}"
+    login_user:  "{{ _mariadb_root_system_user.username }}"
+    login_password: "{{ _mariadb_root_system_user.password }}"
+    login_unix_socket: "{{ mariadb_socket | default(omit) }}"
+    config_file: "{{ _mariadb_root_system_user.home | default('/root') }}/.my.cnf"
   loop:
     '{{ mariadb_databases }}'
   loop_control:
